[package]
name = "ntsc-composite-simulator"
version = "0.1.0"
edition = "2021"
description = "NTSC composite video simulator — encode and decode RGB frames through a simulated NTSC signal path"

[dependencies]
rustfft = "6"
rayon = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = "thin"
